[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/card_front/dream card/dream card moons color.png" type="Texture" id=1]
[ext_resource path="res://src/dreamscape/CardFrontNew.gd" type="Script" id=2]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=3]
[ext_resource path="res://assets/card_front/dream card/dream_card_top_white.png" type="Texture" id=4]
[ext_resource path="res://fonts/CardTypeFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/card_front/dream card/tag_circle.png" type="Texture" id=6]
[ext_resource path="res://shaders/Dreambox.shader" type="Shader" id=7]
[ext_resource path="res://assets/card_front/Game_logo.jpg" type="Texture" id=8]
[ext_resource path="res://assets/card_front/dream card/gem.png" type="Texture" id=9]
[ext_resource path="res://src/dreamscape/GUI/ghost_rtl_effect.gd" type="Script" id=10]
[ext_resource path="res://assets/card_front/gpt-new-front_concentration.png" type="Texture" id=11]
[ext_resource path="res://assets/card_front/dream card/CostBackground.png" type="Texture" id=12]
[ext_resource path="res://assets/card_front/sun.png" type="Texture" id=13]
[ext_resource path="res://assets/card_front/scar-wound.png" type="Texture" id=14]
[ext_resource path="res://assets/card_front/Placeholder_clear.png" type="Texture" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/is_card = true
shader_param/time_offset = null
shader_param/eps = 0.0001
shader_param/steps = 32
shader_param/minDist = 0.01
shader_param/maxDist = 10.0
shader_param/delta = 1.0
shader_param/foldingLimit = 1.0
shader_param/Iterations = 5
shader_param/Scale = 1.5

[sub_resource type="RichTextEffect" id=5]
script = ExtResource( 10 )

[node name="Front" type="Panel" groups=["card_fronts"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1255.0
margin_bottom = -620.0
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="ArtBackground" type="ColorRect" parent="."]
use_parent_material = true
margin_left = 11.0
margin_top = 20.0
margin_right = 191.0
margin_bottom = 150.0
rect_min_size = Vector2( 180, 130 )
mouse_filter = 2
color = Color( 0.435294, 0.435294, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" type="ColorRect" parent="."]
use_parent_material = true
margin_left = 31.0
margin_top = 5.0
margin_right = 171.0
margin_bottom = 23.0
rect_min_size = Vector2( 140, 18 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBackground" type="Panel" parent="."]
use_parent_material = true
margin_left = 3.92099
margin_top = 137.04
margin_right = 193.921
margin_bottom = 277.04
rect_min_size = Vector2( 190, 140 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextShader" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
material = SubResource( 3 )
margin_left = 3.92099
margin_top = 137.04
margin_right = 193.921
margin_bottom = 277.04
rect_min_size = Vector2( 190, 140 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Art" type="TextureRect" parent="."]
use_parent_material = true
margin_left = 10.0
margin_top = 22.0
margin_right = 190.0
margin_bottom = 137.0
rect_min_size = Vector2( 180, 115 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 7

[node name="Animation" type="VideoPlayer" parent="."]
visible = false
use_parent_material = true
margin_left = 10.0
margin_top = 22.0
margin_right = 190.0
margin_bottom = 137.0
rect_min_size = Vector2( 180, 115 )
mouse_filter = 2
autoplay = true

[node name="CardDesign" type="TextureRect" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.297302
margin_top = 0.297302
margin_right = -0.297302
margin_bottom = 0.297302
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="RarityMiddle" type="TextureRect" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 92.5
margin_top = 160.0
margin_right = -92.5
margin_bottom = -105.0
rect_min_size = Vector2( 15, 15 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostContainer" type="CenterContainer" parent="."]
use_parent_material = true
margin_left = 80.404
margin_top = 125.0
margin_right = 120.404
margin_bottom = 165.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="CostIcon" type="TextureRect" parent="CostContainer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
use_parent_material = true
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
texture = ExtResource( 12 )
expand = true

[node name="Cost" type="Label" parent="CostContainer"]
use_parent_material = true
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0.560784, 0, 1 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Placeholder" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.415686 )
margin_left = 124.0
margin_top = 21.0
margin_right = 224.0
margin_bottom = 43.0
rect_min_size = Vector2( 100, 10 )
rect_rotation = 32.5
mouse_filter = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="Scarred" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_left = 176.0
margin_top = 36.0
margin_right = 211.0
margin_bottom = 71.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enhanced" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_left = -10.0
margin_top = 33.0
margin_right = 25.0
margin_bottom = 68.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RarityTop" type="TextureRect" parent="."]
use_parent_material = true
anchor_right = 1.0
rect_min_size = Vector2( 200, 40 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
modulate = Color( 0.486275, 0.364706, 0.0509804, 1 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardText" type="VBoxContainer" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtLayover" type="VBoxContainer" parent="CardText"]
use_parent_material = true
margin_right = 200.0
margin_bottom = 185.0
rect_min_size = Vector2( 200, 185 )
mouse_filter = 2
custom_constants/separation = 0

[node name="NamePush" type="Control" parent="CardText/ArtLayover"]
use_parent_material = true
margin_right = 200.0
margin_bottom = 3.0
rect_min_size = Vector2( 200, 3 )
mouse_filter = 2

[node name="MC" type="MarginContainer" parent="CardText/ArtLayover"]
use_parent_material = true
margin_top = 3.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 16 )
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_left = 32

[node name="Name" type="Label" parent="CardText/ArtLayover/MC"]
use_parent_material = true
margin_left = 32.0
margin_right = 168.0
margin_bottom = 21.0
rect_min_size = Vector2( 136, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="MC2" type="MarginContainer" parent="CardText/ArtLayover"]
use_parent_material = true
margin_top = 24.0
margin_right = 200.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 13 )
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Type" type="Label" parent="CardText/ArtLayover/MC2"]
use_parent_material = true
margin_left = 50.0
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 13 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
text = "Type"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutsideArt" type="MarginContainer" parent="CardText"]
self_modulate = Color( 1, 1, 1, 0.180392 )
use_parent_material = true
margin_top = 185.0
margin_right = 200.0
margin_bottom = 269.0
rect_min_size = Vector2( 0, 61 )
mouse_filter = 2
custom_constants/margin_right = 15
custom_constants/margin_left = 20

[node name="Abilities" type="RichTextLabel" parent="CardText/OutsideArt"]
use_parent_material = true
margin_left = 20.0
margin_right = 185.0
margin_bottom = 84.0
rect_min_size = Vector2( 160, 84 )
mouse_filter = 2
size_flags_vertical = 6
text = "Ability Text"
custom_effects = [ SubResource( 5 ) ]

[node name="TagContainer1" type="CenterContainer" parent="."]
visible = false
use_parent_material = true
margin_left = 1.333
margin_top = 130.0
margin_right = 41.333
margin_bottom = 170.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TagContainer" type="TextureRect" parent="TagContainer1"]
modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
use_parent_material = true
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="TagIcon" type="TextureRect" parent="TagContainer1"]
use_parent_material = true
margin_left = 9.0
margin_top = 9.0
margin_right = 31.0
margin_bottom = 31.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
expand = true

[node name="TagContainer2" type="CenterContainer" parent="."]
visible = false
use_parent_material = true
margin_left = 158.574
margin_top = 130.0
margin_right = 198.574
margin_bottom = 170.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TagContainer" type="TextureRect" parent="TagContainer2"]
modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
use_parent_material = true
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="TagIcon" type="TextureRect" parent="TagContainer2"]
use_parent_material = true
margin_left = 9.0
margin_top = 9.0
margin_right = 31.0
margin_bottom = 31.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
expand = true

[node name="TagContainer3" type="CenterContainer" parent="."]
visible = false
use_parent_material = true
margin_left = 1.333
margin_top = 98.0
margin_right = 41.333
margin_bottom = 138.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TagContainer" type="TextureRect" parent="TagContainer3"]
modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
use_parent_material = true
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="TagIcon" type="TextureRect" parent="TagContainer3"]
use_parent_material = true
margin_left = 9.0
margin_top = 9.0
margin_right = 31.0
margin_bottom = 31.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
expand = true

[node name="TagContainer4" type="CenterContainer" parent="."]
visible = false
use_parent_material = true
margin_left = 159.574
margin_top = 98.0
margin_right = 199.574
margin_bottom = 138.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TagContainer" type="TextureRect" parent="TagContainer4"]
modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
use_parent_material = true
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="TagIcon" type="TextureRect" parent="TagContainer4"]
use_parent_material = true
margin_left = 9.0
margin_top = 9.0
margin_right = 31.0
margin_bottom = 31.0
rect_min_size = Vector2( 22, 22 )
mouse_filter = 2
expand = true

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
visible = false
copy_mode = 2
rect = Rect2( 0, 0, 200, 280 )

[node name="ShaderEffect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 280 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tags" type="Label" parent="."]
visible = false
margin_right = 6.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 10 )
